# Mini-FT8

./: .gitignore  CMakeLists.txt  README.md  flow.dot  partitions.csv  pc_terminal.py  sdkconfig  sdkconfig.old
components/M5Cardputer/: .clang-format  CMakeLists.txt  README.md  library.json  library.properties
components/M5Cardputer/examples/UI/REPL/: REPL.ino  ReplView.cpp  ReplView.h
components/M5Cardputer/src/: Arduino.h  M5Cardputer.cpp  M5Cardputer.h
components/M5Cardputer/src/utility/: common.h
components/M5Cardputer/src/utility/Adafruit_TCA8418/: Adafruit_TCA8418.cpp  Adafruit_TCA8418.h  Adafruit_TCA8418_registers.h
components/M5Cardputer/src/utility/Keyboard/: Keyboard.cpp  Keyboard.h  Keyboard_def.h
components/M5Cardputer/src/utility/Keyboard/KeyboardReader/: IOMatrix.cpp  IOMatrix.h  KeyboardReader.h  TCA8418.cpp  TCA8418.h
components/ft8_lib/common/: audio.c  audio.h  monitor.c  monitor.h  stpcpy_compat.c  stpcpy_compat.h  wave.c  wave.h
components/ft8_lib/ft8/: message.c
components/ui/: CMakeLists.txt  mic_input.cpp  ui.cpp
components/ui/include/: ui.h
main/: CMakeLists.txt  active_calls.cpp  active_calls.h  idf_component.yml  main.cpp  resample.cpp  resample.h  stream_uac.cpp  stream_uac.h  stream_wav.cpp  stream_wav.h  tx_queue.cpp  tx_queue.h
spiffs_image/: StationData.ini
